@@ -7,6 +7,8 @@ changes relative to sbcl-1.3.10:
     and ARM64. (lp#377616)
   * optimization: faster logical bit-array operations on multidimensional
     arrays.
+  * bug fix: MAKE-ALIEN-STRING returns the number of allocated bytes as a
+    second value as advertised (reported by Johann 'Myrkraverk' Oskarsson)
 
 changes in sbcl-1.3.10 relative to sbcl-1.3.9:
   * enhancement: more compact low-level error signaling code
